fix(ImageUploader): should support change image scale while click icon beside scale-bar while cropping

--- a/packages/image-uploader/src/style/index.less
+++ b/packages/image-uploader/src/style/index.less
@@ -99,6 +99,10 @@
         .arco-slider {
           margin: 0 10px;
         }
+
+        .arco-icon {
+          cursor: pointer;
+        }
       }
 
       &-scale,
